# rust-newsletter

./: .env  Cargo.toml  configuration.yaml
.devcontainer/: .env  devcontainer.json
migrations/: 20220329003920_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
