[package]
name = "rust-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustnewsletter"

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.3"
actix-tls = "3.0.2"
actix-rt = "2.7.0"
tokio = "1.17.0"
serde= { version = "1.0.136", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11.10"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls", 
"macros", 
"postgres", 
"uuid", 
"chrono", 
"migrate"
]